Fix weird scroll lag of some elements and them getting stuck sometimes

--- a/src/renderer/globals.css
+++ b/src/renderer/globals.css
@@ -132,6 +132,8 @@
     }
     html {
         height: 100%;
+        transform: translateZ(0);
+        will-change: transform;
     }
     body {
         height: 100%;
